# NetSentinel

./: README.md  check_live_capture.bat  pyproject.toml  run_nids.py  run_sample.bat
configs/: detector_config.json
data/: sample_flows.jsonl
logs/: live_alerts.jsonl
reports/: nids_report_20260424_211159.html  nids_report_20260424_211159.json  nids_report_20260424_211347.html  nids_report_20260424_211347.json  nids_report_20260424_212857.html  nids_report_20260424_212857.json  nids_report_20260424_212953.html  nids_report_20260424_212953.json  nids_report_20260424_213145.html  nids_report_20260424_213145.json  nids_report_20260424_213741.html  nids_report_20260424_213741.json  nids_report_20260424_214554.html  nids_report_20260424_214554.json  nids_report_20260424_214754.html  nids_report_20260424_214754.json  nids_report_20260424_214939.html  nids_report_20260424_214939.json  nids_report_20260424_230854.html  nids_report_20260424_230854.json  nids_report_20260424_231005.html  nids_report_20260424_231005.json  nids_report_20260424_232255.html  nids_report_20260424_232255.json
src/network_intrusion_detection_system.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/nids/: __init__.py  alert_log.py  anomaly.py  cli.py  context.py  correlation.py  dashboard.py  engine.py  live_capture.py  loader.py  ml_anomaly.py  models.py  precision.py  protocols.py  realtime.py  reporting.py  rules.py
tests/: test_detection_pipeline.py
