[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "network-intrusion-detection-system"
version = "0.1.0"
description = "A layered network-based intrusion detection system with signature, anomaly, and correlation analytics."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "OpenAI Codex" }
]
dependencies = ["scapy>=2.5.0"]

[project.scripts]
nids = "nids.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
